src/components/pageSections/SectionProjects/SectionProjects.scss
@import '../../../stylesheets/media';
@import '../../../stylesheets/variables';

.section-projects {
  margin-bottom: 80px;
  .content-container {
    @include media-medium {
      padding: 0;
    }
    @include media-small {
      padding: 0;
    }

    // Section Title
    .section-title {
      @include media-medium {
        padding: 0 20px;
      }
      @include media-small {
        padding: 0 20px;
      }
    }

    // Slider Container
    .slider-container {
      position: relative;
      margin-bottom: 50px;
      @include media-small {
        margin-bottom: 30px;
      }
    
      // Slick Arrows
      .slick-arrow {
        height: 100%;
        width: 35%;
        z-index: 1;
        &:before {
          content: '';
        }
        &.slick-prev {
          cursor: url('../../../assets/slider-arrow-prev.png'), url('../../../assets/slider-arrow-prev.png'), w-resize;
        }
        &.slick-next {
          cursor: url('../../../assets/slider-arrow-next.png'), url('../../../assets/slider-arrow-next.png'), e-resize;
        }
      }

      // Slick Dots
      .slick-dots {
        bottom: -50px;
        z-index: 1;
        @include media-small {
          bottom: -40px;
        }
        li {
          button::before {
            color: rgba(256, 256, 256, .7);
            color: $golden-color;
            font-size: 10px;
            @include media-small {
              font-size: 9px;
            }
          }
        }
      }

      // Project Card
      .project-card {
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        height: 400px;
        margin: 20px;
        overflow: hidden;
        opacity: .4;
        pointer-events: none;
        transition: all .3s ease-in-out;
        @include media-phone-land {
          height: 60vh;
        }
        @include media-small {
          height: 300px;
        }
    
        // Card Shading
        &:after {
          content: '';
          position: absolute;
          height: 80%;
          width: 100%;
          left: 0;
          bottom: 0;
          background-image: linear-gradient(
            to top,
            rgba(0,0,0,.9) 0%,
            rgba(0,0,0,.8) 10%,
            rgba(0,0,0,.7) 30%,
            rgba(0,0,0,.5) 50%,
            rgba(0,0,0,.3) 70%,
            rgba(0,0,0,.2) 80%,
            rgba(0,0,0,.1) 90%,
            rgba(0,0,0,0) 100%
          );
        }

        // Image
        .project-image {
          position: relative;
          width: 100%;
          height: 100%;
          object-fit: cover;
          transform: scaleY(1);
          transition: transform 1s linear;
        }

        // Text
        .project-text-container {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: flex-end;
          color: #fff;
          position: absolute;
          padding: 0 20px 20px;
          width: 100%;
          height: 20%;
          left: 0;
          bottom: 0;
          z-index: 1;
          transition: height .5s ease-in-out;
          .project-title {
            color: $golden-color;
            font-weight: 500;
            font-size: 24px;
            line-height: 1.2;
            width: 100%;
            text-align: left;
            @include media-small {
              font-size: 22px;
            }
          }
          .project-info-block {
            width: 100%;
            overflow: hidden;
            .project-description {
              display: -webkit-box;
              -webkit-line-clamp: 3;
              -webkit-box-orient: vertical;  
              overflow: hidden;
              line-height: 1.3;
              color: rgba(256,256,256,.7);
              margin-bottom: 15px;
              opacity: 0;
              transition: opacity .3s ease-in-out;
              @include media-small {
                font-size: 14px;
              }
            }
            .project-date-block {
              display: flex;
              justify-content: flex-end;
              opacity: 0;
              transition: opacity .3s ease-in-out;
              .date {
                color: rgba(256,256,256,.7);
                font-size: 14px;
                border: 1px solid rgba(256,256,256,.7);
                border-radius: 20px;
                padding: 0 10px;
                @include media-small {
                  font-size: 12px;
                }
              }
            }
          }
        }
      }
      .slick-slide {
        transition: all .3s ease-in-out;
      }
    
      // Center card
      .slick-center {
        transform: scale(1.1);
        .project-card {
          pointer-events: auto;
          opacity: 1;
          .project-image {
            transform: scale(1.2);
            transition: transform 5s linear;
          }
          .project-text-container {
            height: 60%;
            transition: height .8s ease-in-out;
            @include media-phone-land {
              height: 70%;
            }
            .project-description {
              opacity: 1;
              transition: opacity .5s ease-in-out;
              transition-delay: .3s;
            }
            .project-date-block {
              opacity: 1;
              transition: opacity .7s ease-in-out;
              transition-delay: .7s;
            }
          }
        }
      }
    }

    // Button "View All Projects"
    .button-container {
      display: flex;
      justify-content: center;
      width: 100%;
      padding: 50px 20px 0;
      .button {
        padding: 0 40px;
        letter-spacing: 2px;
        @include media-small {
          padding: 0 30px;
          letter-spacing: 1px;
        }
      }
    }

    // Loader Container
    .loader-container {
      margin-top: 0;
    }
  }
}

